--- a/final_project/css/styles.css
+++ b/final_project/css/styles.css
@@ -1,7 +1,7 @@
 /* To Do
 - change it to mobile first?
 - for tablet size show 3 in a row of the project squares
-- make buttons for social media
+- make buttons for social media DONE
 - make buttons for skills
 - shrink header text when on mobile size
 - change background / style of accordion DONE
@@ -12,7 +12,7 @@
 - why is everything from about onwards in one container FIXED
 - work out how to size header image for different screens
 - make navbar transparent until scrolling?
-- make a contact form?
+- make a contact form? with email / name etc
 */
 
 /*generic stylinz*/
