--- a/final_project/css/styles.css
+++ b/final_project/css/styles.css
@@ -12,7 +12,7 @@
 - why is everything from about onwards in one container FIXED
 - work out how to size header image for different screens
 - make navbar transparent until scrolling?
-- make a contact form? with email / name etc
+- make a contact form? with email / name etc - WIP
 */
 
 /*generic stylinz*/
@@ -131,6 +131,32 @@ p {
 }
 
 /*contact stuff*/
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    resize: vertical;
+}
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 5px 15px 5px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+.contactform {
+    border-radius: 5px;
+    background-color: #4CAF50;
+    padding: 10px;
+    margin-bottom: 15px;
+}
 .fa {
   color: white;
   margin: 0px 10px 0px 10px;
@@ -173,4 +199,3 @@ p {
 @media (max-width: 767px) { ... }
 /* Landscape phones and down */
 @media (max-width: 480px) { ... }
-
