--- a/final_project/css/styles.css
+++ b/final_project/css/styles.css
@@ -1,6 +1,7 @@
 /* To Do
 - change it to mobile first?
 - for tablet size show 3 in a row of the project squares
+- have section for p5.js and section for web dev rather than together?
 - make buttons for social media DONE
 - make buttons for skills link to stuff DONE - need to decide whether to make
 these link to stuff or stop them being clickable
